--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -1,103 +1,166 @@
+<!--&lt;!&ndash;<!DOCTYPE html>&ndash;&gt;-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head th:replace="~{fragments/header :: headerFragment}">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Thymeleaf Springboot </title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+
+<!--<div class="container-fluid bg-secondary form-Border">-->
+<!--    <div class="row text-center formManagement border-info">-->
+
+<!--        <div class="col">-->
+<!--            <h4 class="text-info text-center">-->
+<!--                <strong>-->
+<!--                    Employee Management-->
+<!--                </strong>-->
+<!--            </h4>-->
+<!--        </div>-->
+
+<!--    </div>-->
+
+<!--</div>-->
+
+<!--<div class="row formManagement">-->
+
+<!--    <div class="col-md-3">-->
+<!--        <div class="col-md-10">-->
+<!--        <a class="btn btn-success" href="/employee/add" id="button1"><i class="fa fa-user-plus" style="font-size: 20px"></i>-->
+<!--            &nbsp; New Employee</a>-->
+<!--        </div>-->
+
+<!--    </div>-->
+
+
+<!--   &lt;!&ndash; <div class="col-md-1"></div>&ndash;&gt;-->
+
+<!--    <div class="col-md-8  text-center">-->
+<!--        <div class="col">-->
+<!--            <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">-->
+<!--                <table class="table table-hover table-striped" id="myTable">-->
+<!--                    <thead>-->
+<!--                    <tr>-->
+<!--                        <th> Index</th>-->
+<!--                        <th> Pay Role Number</th>-->
+<!--                        <th> Name</th>-->
+<!--                        <th> Mobile</th>-->
+<!--                        <th> Designation</th>-->
+<!--                        <th> Status</th>-->
+<!--                        <th> Modify</th>-->
+<!--                    </tr>-->
+<!--                    </thead>-->
+<!--                    <tbody>-->
+<!--                    <tr th:each="employee, rowCount : ${employees}">-->
+<!--                        <th th:text="${rowCount.count}"></th>-->
+<!--                        <th th:text="${employee.payRoleNumber}"></th>-->
+<!--                        <th th:text="${employee.callingName}"></th>-->
+<!--                        <th th:text="${employee.mobileOne}"></th>-->
+<!--                        <th th:text="${employee.designation.designation}"></th>-->
+<!--                        <th th:text="${employee.employeeStatus.employeeStatus}"></th>-->
+<!--                        <th>-->
+<!--                            <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-success btn-sm"><i-->
+<!--                                    class="fa fa-folder-open"></i>&nbsp;View</a>-->
+<!--                            <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}"-->
+<!--                               class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>-->
+<!--                            <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"-->
+<!--                               th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"-->
+<!--                               class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>-->
+<!--                                Delete</a>-->
+<!--                        </th>-->
+<!--                    </tr>-->
+<!--                    </tbody>-->
+<!--                </table>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row" th:if="${ #lists.isEmpty(employees)}">-->
+<!--            <div class="col-sm-12">-->
+<!--                <div class="alert alert-warning alert-dismissible fade show" role="alert">-->
+<!--                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">-->
+<!--                        <span aria-hidden="true">&times;</span>-->
+<!--                    </button>-->
+<!--                    <h3 class="text-center text-danger">-->
+<!--                        <strong>There is no employee upto now please add employee to the system-->
+<!--                            using add user button.-->
+<!--                        </strong>-->
+<!--                    </h3>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <script>-->
+<!--                /*active boostrap alert - start*/-->
+<!--                $(".alert").alert();-->
+<!--                /*active boostrap alert - end*/-->
+<!--            </script>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--&lt;!&ndash;footer include&ndash;&gt;-->
+<!--<footer th:replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--&lt;!&ndash;script include&ndash;&gt;-->
+<!--<script th:replace="~{fragments/script :: scriptFragment}"></script>-->
+
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: headerFragment}">
+<html lang="en">
+<!--Styles, meta data, and title are included-->
+<head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Student Management</title>
 </head>
 <body>
-<nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
+<!--Nav bar is included-->
+<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="container-fluid bg-secondary form-Border">
-    <div class="row text-center formManagement border-info">
-
-        <div class="col">
-            <h4 class="text-info text-center">
-                <strong>
-                    Employee Management
-                </strong>
-            </h4>
-        </div>
-
+<div class="row bg-light">
+    <div class="col-4"></div>
+    <div class="col-4">
+        <h1>Employee Management</h1>
     </div>
-
+    <div class="col-4"> <a href="/employee/new">
+        <button class="btn btn-primary">Add Employee</button>
+    </a></div>
 </div>
 
-<div class="row formManagement">
+<div class="container-fluid row">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-10">
+        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
+            <thead class="thead-inverse">
+            <tr>
+                <th>Index</th>
+                <th>Employee ID</th>
+                <th>Calling name</th>
+                <th>Designation</th>
+                <th>Contact number</th>
 
-    <div class="col-md-3">
-        <div class="col-md-10">
-        <a class="btn btn-success" href="/employee/add" id="button1"><i class="fa fa-user-plus" style="font-size: 20px"></i>
-            &nbsp; New Employee</a>
-        </div>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="employee, rowCount : ${employees}">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${employee.payRoleNumber}"></td>
+                <td data-th-text="${employee.callingName}"></td>
+                <td data-th-text="${employee.designation}"></td>
+                <td data-th-text="${employee.mobileOne}"></td>
 
+
+                <td>
+                    <a data-th-href="${'/employee/view/'+ employee.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/employee/edit/'+ employee.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/employee/delete/'+ employee.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-
-
-   <!-- <div class="col-md-1"></div>-->
-
-    <div class="col-md-8  text-center">
-        <div class="col">
-            <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
-                <table class="table table-hover table-striped" id="myTable">
-                    <thead>
-                    <tr>
-                        <th> Index</th>
-                        <th> Pay Role Number</th>
-                        <th> Name</th>
-                        <th> Mobile</th>
-                        <th> Designation</th>
-                        <th> Status</th>
-                        <th> Modify</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="employee, rowCount : ${employees}">
-                        <th th:text="${rowCount.count}"></th>
-                        <th th:text="${employee.payRoleNumber}"></th>
-                        <th th:text="${employee.callingName}"></th>
-                        <th th:text="${employee.mobileOne}"></th>
-                        <th th:text="${employee.designation.designation}"></th>
-                        <th th:text="${employee.employeeStatus.employeeStatus}"></th>
-                        <th>
-                            <a id="employeeView" th:href="${'/employee/' + employee.id}" class="btn btn-success btn-sm"><i
-                                    class="fa fa-folder-open"></i>&nbsp;View</a>
-                            <a id="employeeEdit" th:href="${'/employee/edit/' + employee.id}"
-                               class="btn btn-primary btn-sm"><i class="fa fa-edit"></i>&nbsp;Edit</a>
-                            <a id="employeeRemove" th:href="${'/employee/remove/' + employee.id}"
-                               th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-                               class="btn btn-danger btn-sm"><i class="fa fa-trash"></i>
-                                Delete</a>
-                        </th>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row" th:if="${ #lists.isEmpty(employees)}">
-            <div class="col-sm-12">
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <h3 class="text-center text-danger">
-                        <strong>There is no employee upto now please add employee to the system
-                            using add user button.
-                        </strong>
-                    </h3>
-                </div>
-            </div>
-            <script>
-                /*active boostrap alert - start*/
-                $(".alert").alert();
-                /*active boostrap alert - end*/
-            </script>
-        </div>
-    </div>
+    <div class="col-lg-1"></div>
 </div>
-<!--footer include-->
-<footer th:replace="~{fragments/footer :: footerFragment}"></footer>
-<!--script include-->
-<script th:replace="~{fragments/script :: scriptFragment}"></script>
 
+<!--footer is included-->
+<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<!--script is included-->
+<script data-th-replace="~{fragments/script :: scriptFragment}"></script>
 </body>
 </html>
