Employee module ADD / Employee / Employee-Details
All 3 parts are done....but didn't display

PLEASE ASSIST ASAP

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -118,7 +118,7 @@
     <div class="col-4">
         <h1>Employee Management</h1>
     </div>
-    <div class="col-4"> <a href="/employee/new">
+    <div class="col-4"> <a href="/employee/add">
         <button class="btn btn-primary">Add Employee</button>
     </a></div>
 </div>
