--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -24,9 +24,9 @@
 <!--        <div class="col-sm-1"></div>-->
         <div class="col-sm-5">
             <div class="form-group">
-                <label class="col-sm-6 control-label" data-th-for="${id}">Employee ID</label>
+                <label class="col-sm-6 control-label" data-th-for="${payRoleNumber}">Employee ID</label>
                 <div class="col-sm-6">
-                    <input type="text" data-th-field="*{id}" id="id" placeholder="Employee ID" class="form-control" autofocus>
+                    <input type="text" data-th-field="*{payRoleNumber}" id="payRoleNumber" placeholder="Employee ID" class="form-control" autofocus>
                 </div>
             </div>
             <div class="form-group">
@@ -55,7 +55,7 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-6 control-label">Gender</label>
+                <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>
                 <div class="col-sm-6">
                     <select id="gender" class="form-control" data-th-field="*{gender}" >
                         <option value="Male">Female</option>
