Employee module ADD / Employee / Employee-Details
Didn't functioning well ( Not working CRUD Operations )

krnn danna hama ekama kara sir dn paya 4ka withra idn mekata ottu wenwa..mn ilaga modules tik blnnm sir t plwn nm meka mkk hri krla dennakoo...mn interface eke enn ona tik hdla thynne backend logic wala mkk hri awlk thynw poddk blala dennako

PLEASE ASSIST ASAP

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -138,7 +138,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr data-th-each="employee, rowCount : ${employees}">
+            <tr data-th-each="employee, index : ${employees}">
                 <td data-th-text="${index.count}"></td>
                 <td data-th-text="${employee.payRoleNumber}"></td>
                 <td data-th-text="${employee.callingName}"></td>
