--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -32,7 +32,7 @@
             <div class="form-group">
                     <label class="col-sm-6 control-label" data-th-for="${title}">Title</label>
                     <div class="col-sm-6">
-                        <select id="title" data-th-field="*{title}" class="form-control" tabindex="3" required>
+                        <select id="title" data-th-field="*{title}" class="form-control" tabindex="3">
                             <option value="">Please select</option>
                             <option data-th-each="titles : ${title}"
                                     data-th-text="${titles.title}"
@@ -54,15 +54,17 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>
-                <div class="col-sm-6">
-                    <select id="gender" class="form-control" data-th-field="*{gender}" >
-                        <option value="Male">Female</option>
-                        <option value="Female">Female</option>
-                    </select>
-                </div>
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>-->
+<!--                <div class="col-sm-6">-->
+<!--                    <select id="gender" data-th-field="*{gender}" class="form-control">-->
+<!--                        <option data-th-each="genders : ${gender}"-->
+<!--                                data-th-text="${genders.gender}"-->
+<!--                                data-th-value="${genders}"-->
+<!--                                data-th-selected="${genders==employee.gender?'selected':'unselected'}"></option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="form-group">
                 <label class="col-sm-6 control-label" data-th-for="${nic}">NIC</label>
                 <div class="col-sm-6">
@@ -80,15 +82,14 @@
             <div class="form-group">
                 <label class="col-sm-6 control-label">Blood group</label>
                 <div class="col-sm-6">
-                    <select id="bloodGroup" class="form-control" data-th-field="*{bloodGroup}" >
-                        <option value="A+">A+</option>
-                        <option value="o+">o+</option>
-                        <option value="B+">B+</option>
-                        <option value="AB+">AB+</option>
-                        <option value="B-">B-</option>
-                        <option value="o-">o-</option>
-                        <option value="B-">B-</option>
-                        <option value="AB-">AB-</option>
+                    <select id="bloodGroup" data-th-field="*{bloodGroup}" class="form-control" tabindex="9">
+                        <option value="">Please select</option>
+                        <option data-th-each="bloodGroups : ${bloodGroup}"
+                                data-th-text="${bloodGroups.bloodGroup}"
+                                data-th-value="${bloodGroups}"
+                                data-th-selected="${bloodGroups==employee.bloodGroup?'selected':'unselected'}">
+                            Please select
+                        </option>
                     </select>
                 </div>
             </div>
@@ -96,10 +97,13 @@
             <div class="form-group">
                 <label class="col-sm-6 control-label">Martial Status</label>
                 <div class="col-sm-6">
-                    <select id="civilStatus" class="form-control" data-th-field="*{civilStatus}" >
-                        <option value="Single">A+</option>
-                        <option value="Married">o+</option>
-                        <option value="Widowed">B+</option>
+                    <select data-th-field="*{civilStatus}" id="civilStatus" class="form-control"
+                            tabindex="11" >
+                        <option value="">Please select</option>
+                        <option data-th-each="civilStatu : ${civilStatus}"
+                                data-th-text="${civilStatu.CivilStatus}"
+                                data-th-value="${civilStatu}"
+                                data-th-selected="${civilStatu==employee.civilStatus?'selected':'unselected'}"></option>
                     </select>
                 </div>
             </div>
@@ -150,7 +154,7 @@
             <div class="form-group">
                 <label class="col-sm-6 control-label" data-th-for="${createdBy}">User Added by</label>
                 <div class="col-sm-6">
-                    <input type="text" data-th-field="*{createdBy}" id="createdBy" placeholder="Cretae by" class="form-control" autofocus>
+                    <input type="text" data-th-field="*{createdBy}" id="createdBy" placeholder="Created by" class="form-control" autofocus>
                 </div>
             </div>
 
@@ -168,6 +172,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row container-fluid">
+        <div class="col-sm-2 col-sm-offset-2">
+            <button type="link" class="btn btn-danger btn-block">Back</button>
+        </div>
+
+        <div class="col-sm-2 col-sm-offset-2">
+            <button type="reset" class="btn btn-warning btn-block">Clear Data</button>
+        </div>
+
+        <div class="col-sm-2 col-sm-offset-2">
+            <button type="submit" class="btn btn-success btn-block">Submit</button>
         </div>
     </div>
 </form>
