--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -54,17 +54,17 @@
                 </div>
             </div>
 
-<!--            <div class="form-group">-->
-<!--                <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>-->
-<!--                <div class="col-sm-6">-->
-<!--                    <select id="gender" data-th-field="*{gender}" class="form-control">-->
-<!--                        <option data-th-each="genders : ${gender}"-->
-<!--                                data-th-text="${genders.gender}"-->
-<!--                                data-th-value="${genders}"-->
-<!--                                data-th-selected="${genders==employee.gender?'selected':'unselected'}"></option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="form-group">
+                <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>
+                <div class="col-sm-6">
+                    <select id="gender" data-th-field="*{gender}" class="form-control">
+                        <option data-th-each="genders : ${gender}"
+                                data-th-text="${genders.gender}"
+                                data-th-value="${genders}"
+                                data-th-selected="${genders==employee.gender?'selected':'unselected'}"></option>
+                    </select>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-6 control-label" data-th-for="${nic}">NIC</label>
                 <div class="col-sm-6">
