--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -24,13 +24,12 @@
 </div>
 
 <div class="container-fluid row">
-    <div class="col-2"></div>
-    <div class="col-8">
-        <table class="table table-striped table-inverse table-responsive" id="myTable">
+    <div class="table-responsive">
+        <table class="table table-striped table-inverse " id="myTable">
             <thead class="thead-inverse">
             <tr>
                 <th>Index</th>
-                <th>Class Referance</th>
+                <th>Class Reference</th>
                 <th>Year</th>
                 <th>Grade</th>
                 <th>Subject Name</th>
