--- a/src/main/resources/templates/hall/hall.html
+++ b/src/main/resources/templates/hall/hall.html
@@ -33,7 +33,6 @@
 <!--            <th>Modify</th>-->
 
 
-
 <!--        </tr>-->
 <!--        </thead>-->
 <!--        <tbody>-->
@@ -85,12 +84,11 @@
 </div>
 
 <div class="row">
-    <div class="col-lg-1"></div>
-    <div class="col-lg-10">
-        <table class="table table-striped table-inverse table-responsive" id="myTable" >
+    <div class="table-responsive">
+        <table class="table table-striped table-inverse " id="myTable">
             <thead class="thead-inverse">
             <tr>
-<!--                <th>Index</th>-->
+                <!--                <th>Index</th>-->
                 <th>Number</th>
                 <th>Condition</th>
                 <th>Seating Count</th>
@@ -101,22 +99,26 @@
             </thead>
             <tbody>
             <tr data-th-each="hall, index : ${halls}">
-<!--                <td data-th-text="${hall.id}"></td>-->
+                <!--                <td data-th-text="${hall.id}"></td>-->
                 <td data-th-text="${hall.number}"></td>
                 <td data-th-text="${hall.hallCondition}"></td>
                 <td data-th-text="${hall.seatCount}"></td>
                 <td data-th-text="${hall.HallLocation}"></td>
                 <td>
-                    <a data-th-href="${'/hall/view/'+ hall.id}"><button class="btn btn-info">View</button></a>
-                    <a data-th-href="${'/hall/edit/'+ hall.id}"><button class="btn btn-success">Edit</button></a>
-                    <a data-th-href="${'/hall/delete/'+ hall.id}"><button class="btn btn-danger">Delete</button></a>
+                    <a data-th-href="${'/hall/view/'+ hall.id}">
+                        <button class="btn btn-info">View</button>
+                    </a>
+                    <a data-th-href="${'/hall/edit/'+ hall.id}">
+                        <button class="btn btn-success">Edit</button>
+                    </a>
+                    <a data-th-href="${'/hall/delete/'+ hall.id}">
+                        <button class="btn btn-danger">Delete</button>
+                    </a>
                 </td>
             </tr>
             </tbody>
         </table>
     </div>
-    <div class="col-lg-1"></div>
-
 </div>
 
 <!--footer is included-->
