--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -23,8 +23,8 @@
     </div>
 </div>
 
-<div class="container-fluid row">
-    <div class="table-responsive">
+<div class="row">
+    <div class="container table-responsive">
         <table class="table table-striped table-inverse " id="myTable">
             <thead class="thead-inverse">
             <tr>
