--- a/src/main/resources/templates/hall/hall.html
+++ b/src/main/resources/templates/hall/hall.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="row">
-    <div class="table-responsive">
+    <div class="container table-responsive">
         <table class="table table-striped table-inverse " id="myTable">
             <thead class="thead-inverse">
             <tr>
