--- a/src/main/resources/templates/payment/payment-detail.html
+++ b/src/main/resources/templates/payment/payment-detail.html
@@ -1,97 +1,183 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--&lt;!&ndash;Styles, meta data, and title are included&ndash;&gt;-->
+<!--<head data-th-replace="~{fragments/header :: headerFragment}">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Thymeleaf Springboot </title>-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash;Nav bar is included&ndash;&gt;-->
+<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+
+<!--<div class="row bg-secondary">-->
+<!--    <div class="col-4">-->
+<!--        <a href="/payment/new">-->
+<!--            <button class="btn btn-info">Make a Payment</button>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--    <div class="col-4">-->
+<!--        <h1>Payment Management - Payment Details</h1>-->
+<!--    </div>-->
+<!--    <div class="col-4">-->
+<!--        <a href="/payment">-->
+<!--            <button class="btn btn-primary">view All Payment</button>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</div>-->
+<!--&lt;!&ndash;Payment detail&ndash;&gt;-->
+<!--<div class="container-fluid" data-th-fragment="paymentDetail">-->
+<!--    &lt;!&ndash;payment id&ndash;&gt;-->
+<!--    <div class="form-payment">-->
+<!--        <label data-th-for="${id}">Id</label>-->
+<!--        <p class="form-control" data-th-text="${paymentDetail.id}"></p>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;TranID&ndash;&gt;-->
+<!--    <div class="form-payment">-->
+<!--        <label data-th-for="${tranId}"></label>-->
+<!--        <p class="form-control" data-th-text="${paymentDetail.tranId}"></p>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;discountStatus&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${discountStatus}">Discount Status :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${paymentDetail.discountStatus}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;amount&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${amount}">amount :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${paymentDetail.amount}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;time&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${createdTime}">time :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${paymentDetail.createdTime}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;date&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${createdDate}">date :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${paymentDetail.createdDate}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;createdBy&ndash;&gt;-->
+<!--    <div class="form-row text-right">-->
+<!--        <div class="col-md-4">-->
+<!--            <label class="control-label" data-th-for="${createdBy}">createdBy :</label>-->
+<!--        </div>-->
+<!--        <div class="col-md-8">-->
+<!--            <p class="form-control" data-th-text="${paymentDetail.createdBy}"></p>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--</div>-->
+<!--&lt;!&ndash;Button&ndash;&gt;-->
+<!--<div class="form-payment col-md-12 col-sm-12 text-center flex-column ">-->
+<!--    <a href="/payment">-->
+<!--        <button class="btn btn-success" tabindex="21" type="submit">-->
+<!--            Back-->
+<!--        </button>-->
+<!--    </a>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;footer is included&ndash;&gt;-->
+<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--&lt;!&ndash;script is included&ndash;&gt;-->
+<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Student Management</title>
 </head>
 <body>
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
+<div class="row bg-link">
+    <div class="col-4">
+
+    </div>
+    <div class="col-4">
+        <h1>Payment Details</h1>
+    </div>
     <div class="col-4">
         <a href="/payment/new">
-            <button class="btn btn-info">Make a Payment</button>
-        </a>
-    </div>
-    <div class="col-4">
-        <h1>Payment Management - Payment Details</h1>
-    </div>
-    <div class="col-4">
-        <a href="/payment">
-            <button class="btn btn-primary">view All Payment</button>
+            <button class="btn btn-primary" align="center">Make a Payment</button>
         </a>
     </div>
 </div>
-<!--Payment detail-->
-<div class="container-fluid" data-th-fragment="paymentDetail">
-    <!--payment id-->
-    <div class="form-payment">
-        <label data-th-for="${id}">Id</label>
-        <p class="form-control" data-th-text="${paymentDetail.id}"></p>
-    </div>
-    <!--TranID-->
-    <div class="form-payment">
-        <label data-th-for="${tranId}"></label>
-        <p class="form-control" data-th-text="${paymentDetail.tranId}"></p>
-    </div>
-    <!--discountStatus-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${discountStatus}">Discount Status :</label>
+<!--Discount detail-->
+<div class=" row container-fluid" data-th-fragment="paymentDetail">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-8">
+        <div class="form-group">
+            <label data-th-for="${id}" class="col-sm-3 control-label">Transaction ID</label>
+            <div class="col-sm-6">
+                <p type="text" id="id" class="form-control" data-th-text="*{paymentDetail.id}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${paymentDetail.discountStatus}"></p>
+        <div class="form-group">
+            <label data-th-for="${discountStatus}" class="col-sm-3 control-label">Discount status</label>
+            <div class="col-sm-6">
+                <p type="text" id="discountStatus" class="form-control" data-th-text="*{paymentDetail.discountStatus}">
+            </div>
         </div>
-    </div>
-    <!--amount-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${amount}">amount :</label>
+        <div class="form-group">
+            <label data-th-for="${amount}" class="col-sm-3 control-label">Amount</label>
+            <div class="col-sm-6">
+                <p type="text" id="amount" class="form-control" data-th-text="*{paymentDetail.amount}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${paymentDetail.amount}"></p>
+        <div class="form-group">
+            <label data-th-for="${createdTime}" class="col-sm-3 control-label">Time</label>
+            <div class="col-sm-6">
+                <p type="text" id="createdTime" class="form-control" data-th-text="*{paymentDetail.createdTime}">
+            </div>
         </div>
-    </div>
-    <!--time-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${createdTime}">time :</label>
+        <div class="form-group">
+            <label data-th-for="${createdDate}" class="col-sm-3 control-label">Date</label>
+            <div class="col-sm-6">
+                <p type="text" id="createdDate" class="form-control" data-th-text="*{paymentDetail.createdDate}">
+            </div>
         </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${paymentDetail.createdTime}"></p>
+        <div class="form-group">
+            <label data-th-for="${createdBy}" class="col-sm-3 control-label">Created by</label>
+            <div class="col-sm-6">
+                <p type="text" id="createdBy" class="form-control" data-th-text="*{paymentDetail.createdBy}">
+            </div>
         </div>
-    </div>
-    <!--date-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${createdDate}">date :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${paymentDetail.createdDate}"></p>
-        </div>
-    </div>
-    <!--createdBy-->
-    <div class="form-row text-right">
-        <div class="col-md-4">
-            <label class="control-label" data-th-for="${createdBy}">createdBy :</label>
-        </div>
-        <div class="col-md-8">
-            <p class="form-control" data-th-text="${paymentDetail.createdBy}"></p>
-        </div>
-    </div>
 
-</div>
-<!--Button-->
-<div class="form-payment col-md-12 col-sm-12 text-center flex-column ">
-    <a href="/payment">
-        <button class="btn btn-success" tabindex="21" type="submit">
-            Back
-        </button>
-    </a>
-</div>
+        <div class="row container-fluid">
+            <div class="col-sm-2 col-sm-offset-2">
+                <a href="/payment">
+                    <button type="button"  class="btn btn-danger btn-block" >Back</button>
+                </a>
+            </div>
 
+        </div>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
 <!--footer is included-->
 <footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script is included-->
