--- a/src/main/resources/templates/payment/payment.html
+++ b/src/main/resources/templates/payment/payment.html
@@ -1,57 +1,123 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--&lt;!&ndash;Styles, meta data, and title are included&ndash;&gt;-->
+<!--<head data-th-replace="~{fragments/header :: headerFragment}">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Thymeleaf Springboot </title>-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash;Nav bar is included&ndash;&gt;-->
+<!--<nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>-->
+
+<!--<div class="row bg-secondary">-->
+<!--    <div class="col-4">-->
+<!--        <a href="/payment/new">-->
+<!--            <button class="btn btn-primary">Create Payment</button>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--    <div class="col-4">-->
+<!--        <h1>Payment Management</h1>-->
+<!--    </div>-->
+<!--    <div class="col-4"></div>-->
+<!--</div>-->
+
+<!--<div class="container-fluid">-->
+<!--    <table class="table table-striped table-inverse table-responsive" id="myTable">-->
+<!--        <thead class="thead-inverse">-->
+<!--        <tr>-->
+<!--            <th>Payment Referance</th>-->
+<!--            <th>TranID</th>-->
+<!--            <th>Discount Status</th>-->
+<!--            <th>Amount</th>-->
+<!--            <th>Created Time</th>-->
+<!--            <th>Created Date</th>-->
+<!--            <th>Created By</th>-->
+<!--            <th>Modify</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr data-th-each="payment, index : ${payments}">-->
+<!--            <td data-th-text="${index.count}"></td>-->
+<!--            <td data-th-text="${payment.tranId}"></td>-->
+<!--            <td data-th-text="${payment.discountStatus}"></td>-->
+<!--            <td data-th-text="${payment.amount}"></td>-->
+<!--            <td data-th-text="${payment.createdDate}"></td>-->
+<!--            <td data-th-text="${payment.createdTime}"></td>-->
+<!--            <td data-th-text="${payment.createdBy}"></td>-->
+<!--            <td>-->
+<!--                <a data-th-href="${'/payment/view/'+ payment.id}"><button class="btn btn-info">View</button></a>-->
+<!--                <a data-th-href="${'/payment/edit/'+ payment.id}"><button class="btn btn-success">Edit</button></a>-->
+<!--                <a data-th-href="${'/payment/delete/'+ payment.id}"><button class="btn btn-danger">Delete</button></a>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--</div>-->
+
+<!--&lt;!&ndash;footer is included&ndash;&gt;-->
+<!--<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>-->
+<!--&lt;!&ndash;script is included&ndash;&gt;-->
+<!--<script data-th-replace="~{fragments/script :: scriptFragment}"></script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Student Management System</title>
 </head>
 <body>
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-secondary">
-    <div class="col-4">
-        <a href="/payment/new">
-            <button class="btn btn-primary">Create Payment</button>
-        </a>
-    </div>
+<div class="row bg-light">
+    <div class="col-4"></div>
     <div class="col-4">
         <h1>Payment Management</h1>
     </div>
-    <div class="col-4"></div>
+    <div class="col-4">
+        <a href="/payment/new">
+        <button class="btn btn-primary">Make a Payment</button>
+        </a>
+    </div>
 </div>
 
-<div class="container-fluid">
-    <table class="table table-striped table-inverse table-responsive" id="myTable">
-        <thead class="thead-inverse">
-        <tr>
-            <th>Payment Referance</th>
-            <th>TranID</th>
-            <th>Discount Status</th>
-            <th>Amount</th>
-            <th>Created Time</th>
-            <th>Created Date</th>
-            <th>Created By</th>
-            <th>Modify</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr data-th-each="payment, index : ${payments}">
-            <td data-th-text="${index.count}"></td>
-            <td data-th-text="${payment.tranId}"></td>
-            <td data-th-text="${payment.discountStatus}"></td>
-            <td data-th-text="${payment.amount}"></td>
-            <td data-th-text="${payment.createdDate}"></td>
-            <td data-th-text="${payment.createdTime}"></td>
-            <td data-th-text="${payment.createdBy}"></td>
-            <td>
-                <a data-th-href="${'/payment/view/'+ payment.id}"><button class="btn btn-info">View</button></a>
-                <a data-th-href="${'/payment/edit/'+ payment.id}"><button class="btn btn-success">Edit</button></a>
-                <a data-th-href="${'/payment/delete/'+ payment.id}"><button class="btn btn-danger">Delete</button></a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div class="row container-fluid">
+    <div class="col-1"></div>
+    <div class="col-10">
+        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
+            <thead class="thead-inverse">
+            <tr>
+                <th>Payment Referance</th>
+                <th>Discount Status</th>
+                <th>Amount</th>
+                <th>Created Time</th>
+                <th>Created Date</th>
+                <th>Created By</th>
+                <th>Modify</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr data-th-each="payment, index : ${payments }">
+                <td data-th-text="${index.count}"></td>
+                <td data-th-text="${payment.discountStatus}"></td>
+                <td data-th-text="${payment.amount}"></td>
+                <td data-th-text="${payment.createdTime}"></td>
+                <td data-th-text="${payment.createdDate}"></td>
+                <td data-th-text="${payment.createdBy}"></td>
+                <td>
+                    <a data-th-href="${'/payment/view/'+ payment.id}"><button class="btn btn-info">View</button></a>
+                    <a data-th-href="${'/payment/edit/'+ payment.id}"><button class="btn btn-success">Edit</button></a>
+                    <a data-th-href="${'/payment/delete/'+ payment.id}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-1"></div>
 </div>
 
 <!--footer is included-->
